--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: PHOTORAMA
 email: ""
 description: "Photo Journal"
 url: "http://anon-hello.github.io"
-baseurl: /master
+baseurl: /anon-hello.github.io
 instagram_username: ""
 github_username:  ""
 deviantart_username: ""
