--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: PHOTORAMA
 email: ""
 description: "Photo Journal"
-url: "http://anon-hello.github.io"
+url: "http://anon-hello.github.io/photography"
 baseurl: /photography
 instagram_username: ""
 github_username:  ""
